--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
 parts/
 sdist/
-var/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -87,3 +84,5 @@ ENV/
 
 # Rope project settings
 .ropeproject
+.idea
+
