--- a/.gitignore
+++ b/.gitignore
@@ -6,21 +6,6 @@ __pycache__/
 # C extensions
 *.so
 
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-parts/
-sdist/
-*.egg-info/
-.installed.cfg
-*.egg
-
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -86,3 +71,6 @@ ENV/
 .ropeproject
 .idea
 
+test/*
+!test/test_excel.py
+!test/testlog/*
