--- a/.gitignore
+++ b/.gitignore
@@ -16,21 +16,6 @@ __pycache__/
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
-.hypothesis/
-
-# Translations
-*.mo
-*.pot
-
 # Django stuff:
 *.log
 local_settings.py
@@ -70,8 +55,9 @@ ENV/
 # Rope project settings
 .ropeproject
 .idea
-
 test/*
 !test/test_excel.py
 !test/testlog/*
 test/testlog/result.xls
+
+calc/excel.txt
